# termseparator

./: README.md  pyproject.toml  test.py
Testing/: termseperator.py
termseparator/: __init__.py
termseparator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
